# liars

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  dice.cpp  dice.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  main.cpp  test_utils.cpp
